[package]
name = "ime-conversion-vim"
version = "0.1.0"
authors = ["huangjj27 <huangjj.27@qq.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.windows-sys]
version = "0.36.1"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_UI_Input_Ime",
    "Win32_UI_WindowsAndMessaging",
]
