[package]
name = "im-conversion"
version = "0.1.0"
description = "a better implementation of im-select on windows!"
authors = ["huangjj27 <huangjj.27@qq.com>"]
edition = "2021"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.51.0"
features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Mailslots",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Input_Ime",
    "Win32_UI_WindowsAndMessaging",
]
