[package]
name = "im-convert"
version = "0.1.0"
description = "a better implementation of im-select on windows!"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-syringe = "0.13.1"
structopt = "0.3"
